[package]
name = "yfp"
version = "0.1.0"
edition = "2021"
description = "A Yahoo finance scraper"
license = "MIT"
repository = "https://github.com/Eyob94/yfp"

[dependencies]
reqwest = { version = "0.*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
tracing = { version = "0.*" }
tracing-subscriber = { version = '0.3', features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
scraper = "0.*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
